--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section class="form hide">
       <h2>Entre na lista de doadores</h2>
-      <form action="/">
+      <form action="/" method="POST">
         <input type="text" name="name" placeholder="Nome Completo" />
         <input type="text" name="email" placeholder="Email" />
         <input type="text" name="blood" placeholder="Tipo Sanguíneo" />
@@ -30,15 +30,15 @@
       <h2>Ultimos <span>doadores</span></h2>
 
       <section class="donors">
-        <div class="donor">
-          <div class="blood">AB+</div>
-          <p>Diego Fernandes</p>
-        </div>
+
+        {% for donor in donors %}
 
         <div class="donor">
-          <div class="blood">A+</div>
-          <p>Nimue</p>
+          <div class="blood">{{donor.blood}}</div>
+          <p>{{donor.name}}</p>
         </div>
+
+        {% endfor %}
       </section>
     </main>
 
